--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "scripts": {
-    "server": "NODE_ENV=development ./node_modules/.bin/netlify-lambda server src",
-    "build": "NODE_ENV=production ./node_modules/.bin/netlify-lambda server src"
+  "engines": {
+    "node": "14.x"
   },
+  
   "author": "Ayush Pandey",
   "license": "ISC",
   "dependencies": {
